--- a/backend/data/adding_data.ipynb
+++ b/backend/data/adding_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -10,8 +10,21 @@
      "output_type": "stream",
      "text": [
       "Index(['raceId', 'driverId', 'constructorId', 'points', 'laps', 'time',\n",
-      "       'fastestLapTime', 'driverRef', 'nationality', 'circuitId', 'name'],\n",
-      "      dtype='object')\n"
+      "       'fastestLapTime', 'driverRef', 'nationality', 'circuitId',\n",
+      "       'circuitname', 'date'],\n",
+      "      dtype='object')\n",
+      "Column: raceId, Type: int64, Sample: 18\n",
+      "Column: driverId, Type: int64, Sample: 1\n",
+      "Column: constructorId, Type: int64, Sample: 1\n",
+      "Column: points, Type: float64, Sample: 10.0\n",
+      "Column: laps, Type: int64, Sample: 58\n",
+      "Column: time, Type: object, Sample: 1:34:50.616\n",
+      "Column: fastestLapTime, Type: object, Sample: 1:27.452\n",
+      "Column: driverRef, Type: object, Sample: hamilton\n",
+      "Column: nationality, Type: object, Sample: British\n",
+      "Column: circuitId, Type: int64, Sample: 1\n",
+      "Column: circuitname, Type: object, Sample: Australian Grand Prix\n",
+      "Column: date, Type: object, Sample: 2008-03-16\n"
      ]
     }
    ],
@@ -19,7 +32,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load the results data with the correct header handling\n",
-    "results_df = pd.read_csv('results.csv', header=0)\n",
+    "results_df = pd.read_csv('./extra_data/results.csv', header=0)\n",
     "results_df.columns = ['resultId', 'raceId', 'driverId', 'constructorId', 'number', 'grid', 'position', 'positionText', 'positionOrder', 'points', 'laps', 'time', 'milliseconds', 'fastestLap', 'rank', 'fastestLapTime', 'fastestLapSpeed', 'statusId']\n",
     "\n",
     "# Convert driverId to the same data type in results_df\n",
@@ -38,7 +51,8 @@
     "# Load the race data with the correct header handling\n",
     "race_df = pd.read_csv('races.csv', header=0)\n",
     "race_df['circuitId'] = race_df['circuitId'].astype(int)\n",
-    "filtered_df_3 = race_df[['raceId', 'circuitId', 'name']]\n",
+    "filtered_df_3 = race_df[['raceId', 'circuitId', 'name','date']].copy()\n",
+    "filtered_df_3.rename(columns={'name': 'circuitname'}, inplace=True)\n",
     "\n",
     "# Merge the results data with the driver data on driverId\n",
     "merged_df = pd.merge(filtered_df_1, filtered_df_2, on='driverId')\n",
@@ -47,10 +61,12 @@
     "merged_df = pd.merge(merged_df, filtered_df_3, on='raceId')\n",
     "\n",
     "# Save the final merged DataFrame to a new CSV file\n",
-    "merged_df.to_csv('race_results.csv', index=False)\n",
+    "merged_df.to_csv('race_results.csv', index=True)\n",
     "\n",
     "# Display the relevant columns to verify driver information\n",
-    "print(merged_df.columns)"
+    "print(merged_df.columns)\n",
+    "for col in merged_df.columns:\n",
+    "    print(f\"Column: {col}, Type: {merged_df[col].dtype}, Sample: {merged_df[col].iloc[0]}\")"
    ]
   },
   {
