adding year to df

--- a/backend/data/adding_data.ipynb
+++ b/backend/data/adding_data.ipynb
@@ -71,6 +71,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        2008\n",
+      "1        2008\n",
+      "2        2008\n",
+      "3        2008\n",
+      "4        2008\n",
+      "         ... \n",
+      "26514    1950\n",
+      "26515    1950\n",
+      "26516    1950\n",
+      "26517    1950\n",
+      "26518    1950\n",
+      "Name: year, Length: 26519, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "race_results = pd.read_csv(\"race_results.csv\")\n",
+    "race_results['year'] = race_results['date'].str.split('-').str[0].astype(int)\n",
+    "print(race_results['year'])\n",
+    "race_results.to_csv(\"race_results.csv\", index=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
