chore: Update circuitData component to display fastest lap time and driver

--- a/backend/data/adding_data.ipynb
+++ b/backend/data/adding_data.ipynb
@@ -157,6 +157,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['circuitId', 'circuitRef', 'name', 'location', 'country', 'lat', 'lng',\n",
+      "       'alt', 'url', 'circuitLength(KM)', 'fastestDriver', 'fastestYear',\n",
+      "       'laps', 'raceDistance(KM)', 'fastestLapTime'],\n",
+      "      dtype='object')\n",
+      "circuitId int64\n",
+      "circuitRef object\n",
+      "name object\n",
+      "location object\n",
+      "country object\n",
+      "lat float64\n",
+      "lng float64\n",
+      "alt int64\n",
+      "url object\n",
+      "circuitLength(KM) float64\n",
+      "fastestDriver object\n",
+      "fastestYear float64\n",
+      "laps float64\n",
+      "raceDistance(KM) float64\n",
+      "fastestLapTime float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the CSV file\n",
+    "df = pd.read_csv(\"circuits.csv\")\n",
+    "print(df.columns)\n",
+    "\n",
+    "\n",
+    "# Function to convert '1:12.909' to total seconds\n",
+    "def convert_to_seconds(time_str):\n",
+    "    if pd.isnull(time_str):\n",
+    "        return None\n",
+    "    try:\n",
+    "        minutes, seconds = time_str.split(':')\n",
+    "        return int(minutes) * 60 + float(seconds)\n",
+    "    except ValueError:\n",
+    "        return None\n",
+    "\n",
+    "# Apply the conversion to the 'fastestLapTime' column and store the result in a new column\n",
+    "# df['fastestLapTime_in_seconds'] = df['fastestLapTime'].map(convert_to_seconds)\n",
+    "\n",
+    "# df = df.drop(columns=['fastestLapTime'])\n",
+    "\n",
+    "# Rename the new column\n",
+    "df = df.rename(columns={'fastestLapTime_in_seconds': 'fastestLapTime'})\n",
+    "for column in df.columns:\n",
+    "    print(column,df[column].dtype)\n",
+    "    if df[column].dtype == 'float64' or df[column].dtype == 'int64':\n",
+    "        df[column] = df[column].fillna(0)\n",
+    "    elif df[column].dtype == 'object':\n",
+    "        df[column] = df[column].fillna('')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
