--- a/backend/data/adding_data.ipynb
+++ b/backend/data/adding_data.ipynb
@@ -222,6 +222,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd, pprint as p\n",
+    "\n",
+    "results_df = pd.read_csv(\"race_results.csv\")\n",
+    "\n",
+    "\n",
+    "results_df['is_winner'] = results_df.groupby('raceId')['points'].transform(lambda x: x == x.max()).sort_index()\n",
+    "# results_df.to_csv('race_results.csv',index=False)\n",
+    "# results_df.drop(columns=['Unnamed: 0.1'], inplace=True)\n",
+    "# results_df.drop(columns=['Unnamed: 0'], inplace=True)\n",
+    "# results_df.drop(columns=['index'], inplace=True)\n",
+    "results_df.to_csv('race_results.csv',index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
