add wins to database

--- a/backend/data/adding_data.ipynb
+++ b/backend/data/adding_data.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,11 +231,9 @@
     "results_df = pd.read_csv(\"race_results.csv\")\n",
     "\n",
     "\n",
-    "results_df['is_winner'] = results_df.groupby('raceId')['points'].transform(lambda x: x == x.max()).sort_index()\n",
-    "# results_df.to_csv('race_results.csv',index=False)\n",
-    "# results_df.drop(columns=['Unnamed: 0.1'], inplace=True)\n",
-    "# results_df.drop(columns=['Unnamed: 0'], inplace=True)\n",
-    "# results_df.drop(columns=['index'], inplace=True)\n",
+    "results_df['isWinner'] = results_df.groupby('raceId')['points'].transform(lambda x: x == x.max()).sort_index()\n",
+    "results_df.sort_values(by=['raceId','points'], ascending=[True,False], inplace=True)\n",
+    "results_df['seasonWins'] = results_df.groupby(['year','driverRef'])['isWinner'].cumsum()\n",
     "results_df.to_csv('race_results.csv',index=False)\n"
    ]
   },
